# CoolSnake

./: CMakeLists.txt
hdr/: game.hpp  game_objects.hpp  path.hpp  resources.hpp
src/: game.cpp  game_objects.cpp  main.cpp  path.cpp
